--- a/.env.sample
+++ b/.env.sample
@@ -2,4 +2,5 @@ USER_KEY=your_user_key
 ADMIN_KEY=your_admin_key
 SHORTCODE_LENGTH=4
 WEATHER_API_KEY=your_weather_api_key
-DEBBUG=true
+DEBUG=true
+RELEASE_TICKER_INTERVAL=3600
