added a max of 10 failed attempts to create a unique shortcode

--- a/.env.dev
+++ b/.env.dev
@@ -1,6 +1,6 @@
 USER_KEY=your_user_key
 ADMIN_KEY=your_admin_key
-SHORTCODE_LENGTH=4
+SHORTCODE_LENGTH=5
 WEATHER_API_KEY=your_weather_api_key
-DEBUG=true
-RELEASE_TICKER_INTERVAL=3600
+DEBUG=false
+RELEASE_TICKER_INTERVAL=300
